test/1.2/errors/EBADFAIL_dml14.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

template methods_dml14 {
    method call_all() {
        try {
            // no problem
            bad1();
            throwing();
        } catch {}
        // no problem
        good1();
        good2();
        /// ERROR EBADFAIL_dml12
        bad1();
        // all uncaught calls are reported, not just the first one
        /// ERROR EBADFAIL_dml12
        bad1();
        /// ERROR EBADFAIL_dml12
        bad2();
        /// ERROR EBADFAIL_dml12
        bad3();
        /// ERROR EBADFAIL_dml12
        bad4();
        /// ERROR EBADFAIL_dml12
        bad5();
        /// ERROR EBADFAIL_dml12
        bad6();
        /// ERROR EBADFAIL_dml12
        bad7();
        /// ERROR EBADFAIL_dml12
        bad8();
        /// ERROR EBADFAIL_dml12
        bad9();
        /// ERROR EBADFAIL
        shared_dml12();
        /// ERROR EBADFAIL_dml12
        a.set(SIM_make_attr_nil());
    }
    method throwing() throws {
        // no problem
        bad0();
    }
}
